Fix: fixed postButton event listener not working - changed postButton element from button to div in main.html - added display:flex, justify-content:center, align-items:center properties to .post-button in main.css - deleted the line of code for setting postButton disabled attribute inside activatePostButton() in main.js

--- a/students/13th/leedonghun/style/main.css
+++ b/students/13th/leedonghun/style/main.css
@@ -475,6 +475,9 @@ li.feed-comment-item {
 }
 
 .post-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 10%;
   font-size: 90%;
   font-weight: 700;
